@@ -1,1 +1,21 @@
 # Transaction-Management-System
+
+IDE used - IntelliJ
+
+Instructions before you run the code: 
+
+1. First all the dependencies mentioned in the dependencies folder must be set.
+
+2. Second the VM options needs to be set as per the following :
+--module-path "path-to-javafx-sdk-13.0.1\lib" --add-modules javafx.controls,javafx.fxml 
+
+3. Third the MYSQL tables should be available before running the program and the localhost server should be running.
+
+   accounts_database (database) -> checking_account,loan_account,saving_account and transactions (tables)
+   login_database (database) -> customer_account and employee_account (tables)
+
+For more details regarding tables look in Tables folder.
+All source code is available inside sample package in src folder.
+All diagrams are present inside the UML Diagrams folder. 
+
+Note: For the program to run the user must have MYSQL server runnning in his/her system. Also localHost username and password can be set inside SQLdatabase.java connector() method.  
